[gd_scene load_steps=6 format=3 uid="uid://cofhrjy74btwv"]

[ext_resource type="Theme" uid="uid://bdlvgyq3apvwb" path="res://resources/game_theme.tres" id="1_7rlj2"]
[ext_resource type="Script" uid="uid://ce6kj581ovrc1" path="res://scenes/test_setting_scene.gd" id="1_taf6w"]
[ext_resource type="PackedScene" uid="uid://b2vgvwso01wcj" path="res://resources/ui/chalkboard_background.tscn" id="2_8etbl"]
[ext_resource type="PackedScene" uid="uid://cyq5q78exmhgs" path="res://resources/ui/chalkboard_confetti.tscn" id="3_2v6os"]
[ext_resource type="PackedScene" uid="uid://ctvrf3rxaiyc1" path="res://resources/ui/back_button.tscn" id="5_88iou"]

[node name="TestSettingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_taf6w")
metadata/_edit_lock_ = true

[node name="Background" parent="." instance=ExtResource("2_8etbl")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="ChalkboardConfetti" parent="." instance=ExtResource("3_2v6os")]
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7rlj2")
theme_type_variation = &"SceneTitleLabel"
text = "TestSettingScene.TitleLabel"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 1

[node name="Level1Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7rlj2")
text = "TestSettingScene.ReadClockChooseButton"
text_overrun_behavior = 1

[node name="Level2Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7rlj2")
text = "TestSettingScene.AdjustClockChooseButton"

[node name="Level3Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7rlj2")
text = "TestSettingScene.ReadClockButton"

[node name="Level4Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_7rlj2")
text = "TestSettingScene.AdjustClockButton"

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="BackButton" parent="MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("5_88iou")]
layout_mode = 2
size_flags_horizontal = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
